<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="anish.tutorial.toc.ui.home.HomeFragment"
        android:label="@string/convertCNF"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="anish.tutorial.toc.ui.gallery.GalleryFragment"
        android:label="@string/automata"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="anish.tutorial.toc.ui.slideshow.SlideshowFragment"
        android:label="@string/pushdown"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_wordSearch"
        android:name="anish.tutorial.toc.ui.wordSearch.WordSearch"
        android:label="@string/word_search"
        tools:layout="@layout/fragment_word_search" />
    <fragment
        android:id="@+id/nav_avgMath"
        android:name="anish.tutorial.toc.ui.fragments.AverageMathFragment"
        android:label="@string/avgMath"
        tools:layout="@layout/fragment_average_math" />
    <fragment
        android:id="@+id/nav_percentageCal"
        android:name="anish.tutorial.toc.ui.fragments.PercentageCalculator"
        android:label="@string/percentC"
        tools:layout="@layout/fragment_percentage_calculator" />
    <fragment
        android:id="@+id/nav_pieChart"
        android:name="anish.tutorial.toc.ui.fragments.PieChartFragment"
        android:label="@string/pieChartC"
        tools:layout="@layout/fragment_piechart" />
    <fragment
        android:id="@+id/nav_ArdensRule"
        android:name="anish.tutorial.toc.ui.fragments.ArdensRule"
        android:label="@string/ardensrule"
        tools:layout="@layout/fragment_ardensrule" />
    <fragment
        android:id="@+id/nav_hints"
        android:name="anish.tutorial.toc.ui.hints.HintFragment"
        android:label="@string/hint"
        tools:layout="@layout/fragment_hint" />
</navigation>