<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        tools:ignore="ScrollViewSize">
        <TextView
            android:text="@string/texttop"
            android:gravity="center|top"
            android:padding="2dp"
            android:layout_margin="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="25dp"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputSymbol"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="wrap_content">
               <EditText
                   android:id="@+id/enterSymbol"
                   android:hint="@string/sym"
                   android:textColor="@color/black"
                   android:inputType="textCapWords"
                   android:gravity="center"
                   android:maxLength="1"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:text="@string/arrow"
                android:textColor="@color/black"
                android:layout_weight="5"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputVariable"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/enterVariable"
                    android:hint="@string/var"
                    android:textColor="@color/black"
                    android:inputType="textMultiLine"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/setProduction"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:text="@string/set"
                android:background="@color/set"
                android:layout_weight="22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_margin="5dp"
                android:padding="2dp"
                android:id="@+id/calculate"
                android:layout_weight="28"
                android:background="@color/calcu"
                android:text="@string/calculate"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:text="@string/production"
            android:gravity="center|top"
            android:padding="2dp"
            android:layout_margin="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="25dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/grammarView"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:padding="2dp"
            android:minHeight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
       <!-- <TextView
            android:text="@string/result"
            android:gravity="center|top"
            android:padding="2dp"
            android:layout_margin="3dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="25dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/resultView"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:minHeight="100dp"
            android:layout_height="wrap_content"/>-->
        <Button
            android:id="@+id/reset"
            android:layout_margin="3dp"
            android:padding="2dp"
            android:background="@color/reset"
            android:textColor="@color/white"
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>