<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textColor="@color/red"
            android:text="@string/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="100">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPercent1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="45">

                <EditText
                    android:id="@+id/enterpercent1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value1"
                    android:paddingLeft="5dp"
                    android:inputType="number"
                    android:paddingRight="5dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNumber1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="45">

                <EditText
                    android:id="@+id/enterNumber1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value2"
                    android:paddingLeft="5dp"
                    android:inputType="number"
                    android:paddingRight="5dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/resultTexts1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textColor="@color/red"
            android:text="@string/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="100">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPercent2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="45">

                <EditText
                    android:id="@+id/enterpercent2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value1"
                    android:paddingLeft="5dp"
                    android:inputType="number"
                    android:paddingRight="5dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNumber2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="45">

                <EditText
                    android:id="@+id/enterNumber2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value2"
                    android:paddingLeft="5dp"
                    android:inputType="number"
                    android:paddingRight="5dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/resultTexts2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textColor="@color/red"
            android:text="@string/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="100">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPercent3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="45">

                <EditText
                    android:id="@+id/enterpercent3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value1"
                    android:paddingLeft="5dp"
                    android:inputType="number"
                    android:paddingRight="5dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNumber3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="45">

                <EditText
                    android:id="@+id/enterNumber3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value2"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:inputType="number"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/resultTexts3"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</ScrollView>